tests/ok/attributes-user-meta.ari
meta fn trace(input: token_stream) -> token_stream {
}

@trace({ enabled([1u32, 2], (3)) })
fn value() -> i64 {
  return 9;
}

fn main() -> i64 {
  return value();
}
