tests/errors/meta-function-generic.ari
meta fn rewrite[T](input: token_stream) -> token_stream {
}

fn main() -> i64 {
  return 0;
}
